--- a/Тестовое задание/Тестовое задание/Views/Home/Report.cshtml
+++ b/Тестовое задание/Тестовое задание/Views/Home/Report.cshtml
@@ -7,7 +7,7 @@
 
 <h2>Отчет по продажам</h2>
 
-<p>Отчетный период: @ViewBag.startDate.ToString()г. - @ViewBag.endDate.ToString()г.</p>
+<p>Отчетный период: @ViewBag.reportPeriod.StartDate.ToShortDateString()г. - @ViewBag.reportPeriod.EndDate.ToShortDateString()г.</p>
 
 <table class="table table-hover">
     <tr>
@@ -28,6 +28,9 @@
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Quantity)
+        </th>
+        <th>
+            @Html.DisplayName("Сумма")
         </th>
     </tr>
     @foreach (var item in Model)
@@ -50,6 +53,10 @@
             </td>
             <td>
                 @Html.DisplayFor(model => item.Quantity)
+            </td>
+            <td>
+                @{ var summ = (item.Quantity * item.UnitPrice).ToString(); }
+                @Html.Display(summ)
             </td>
         </tr>
     }
