--- a/Тестовое задание/Тестовое задание/Views/Home/ReportingPeriod.cshtml
+++ b/Тестовое задание/Тестовое задание/Views/Home/ReportingPeriod.cshtml
@@ -1,5 +1,4 @@
-﻿@using System.Web.Services.Protocols
-@using Тестовое_задание.Models
+﻿@using Тестовое_задание.Models
 @model ReportingPeriodViewModel
 
 @{
